Fix for is-visible

--- a/assets/sass/_forms.scss
+++ b/assets/sass/_forms.scss
@@ -44,6 +44,7 @@
 
 .form--sidebar {
 	margin-top: 1rem;
+	display: block;
 	
 	.btn {
 		display: block;
